--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -164,6 +164,7 @@
     "contactInstructor": "Contact Instructor",
     "noInstructorsInfo": "No instructor information available yet.",
     "joinVideoSession": "Join Video Session",
+    "watchRecording": "Watch Recording",
     "completed": "Completed",
     "loadingMaterialsEllipsis": "Loading materials...",
     "sessionMaterials": "Session Materials"
