--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -164,6 +164,7 @@
     "contactInstructor": "Contactar Instructor",
     "noInstructorsInfo": "Aún no hay información de instructores disponible.",
     "joinVideoSession": "Unirse a Sesión de Video",
+    "watchRecording": "Ver Grabación",
     "completed": "Completado",
     "loadingMaterialsEllipsis": "Cargando materiales...",
     "sessionMaterials": "Materiales de la Sesión"
