--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -86,6 +86,7 @@
     "myProfile": "Mi Perfil",
     "updateMyProfile": "Actualizar Mi Perfil",
     "manageInstructors": "Gestionar Instructores",
+    "manageUsers": "Gestionar Usuarios",
     "switchView": "Cambiar Vista",
     "studentView": "Vista de Estudiante",
     "instructorView": "Vista de Instructor",
