--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -86,6 +86,7 @@
     "myProfile": "My Profile",
     "updateMyProfile": "Update My Profile",
     "manageInstructors": "Manage Instructors",
+    "manageUsers": "Manage Users",
     "switchView": "Switch View",
     "studentView": "Student View",
     "instructorView": "Instructor View",
